--- a/esportvaMasc.css
+++ b/esportvaMasc.css
@@ -142,7 +142,7 @@ a {
 
 
 
-/* COMEÇO DAS MEIAS CANO CURTO */
+/* COMEÇO DAS MEIAS ESPORTIVAS MASCULINAS*/
 .titulo {
     font-family: "LibreFranklin";
 
@@ -310,7 +310,7 @@ a {
     flex-wrap: wrap;
 }
 
-/* arrumando as imagens das meias cano curto */
+/* arrumando as imagens das meias esportivas */
 
 .Quadrado-da-meia-esportiva-lisa img,
 .Quadrado-da-meia-esportiva-horse img,
@@ -411,21 +411,19 @@ a {
 
 /* -------------------------------------CANO CURTO MASCULINA--------------------------------------------------------------- */
 
-.Quadrado-da-meia-CanoCurto-Desenhada-Cinza img,
-.Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro img,
-.Quadrado-da-meia-CanoCurto-CinzaAzulMarinho img,
-.Quadrado-da-meia-CanoCurto-Branca img{
+.Quadrado-da-meia-CanoCurto-LisaBranca img,
+.Quadrado-da-meia-CanoCurto-Desenhada-Marinho-Vermelho img,
+.Quadrado-da-meia-CanoCurto-Desenhada-FaixaCinza img,
+.Quadrado-da-meia-CanoCurto-Desenhada-Cinza-Preta img {
     width: 220px;
     height: 200px;
 }
-.Quadrado-da-meia-CanoCurto-Branca img{
-    margin-top: -4vh;
-}
 
-.Quadrado-da-meia-Kit-BrancoAzulEScuro-Chumbo-BrancoCInza img,
-.Quadrado-da-meia-Kit-Cinza-Azul-Branco img,
-.Quadrado-da-meia-KitPreto img,
-.Quadrado-da-meia-kit-preto-branco-cinza img {
+
+.Quadrado-da-meia-CanoCurto-LisaKit04 img,
+.Quadrado-da-meia-CanoCurto-LisaKit03 img,
+.Quadrado-da-meia-CanoCurto-Desenhada-Kit02 img,
+.Quadrado-da-meia-CanoCurto-Desenhada-Kit01 img {
 
     width: 390px;
     height: 140px;
@@ -434,23 +432,27 @@ a {
 
 /* CORES */
 
-.cores-preta-cinza,
-.cores-Vermelho-Laranja,
-.cores-branca-preta-cinzaMeias,
-.Kit-BrancoAzulEScuro-Chumbo-BrancoCInza,
-.cores-branca-preta-cinza-Kit,
-.cores-preto-branco-cinza-kit3pares,
-.cores-Kit-Cinza-Azul-Branco,
-.cores-Branca-AzulEscuro {
+.corKit-04,
+.corKit-02,
+.corKit-01,
+.cores-lisas-neutras,
+.coresDesenhada-03,
+.coresDesenhada-02,
+.coresDesenhadas-01,
+.coresKit-03 {
     gap: 1vh;
     display: flex;
     margin-top: 0.75vh;
     cursor: pointer;
-
 }
 
 
-.kit03, .Kit01, .kit02{ font-family: 'WorkSans';
+
+.Kit04,
+.Kit03,
+.Kit02,
+.Kit01 {
+    font-family: 'WorkSans';
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
@@ -458,25 +460,26 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid #9DA1A0;}
+    border: 1px solid #9DA1A0;
+}
 
 
-
-.CorCinza, .CorCinzaMeia, .CorCinzaKit {
+.cinzaDesenhada01, .cinzaLisa04, .cinzaKit03 {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
     background-color: #9DA1A0;
 }
 
-.CorPreta, .CorPretaMeia, .CorPretaKit {
+
+.pretaDesenhada01, .pretaLisa04, .pretoKit03{
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
     background-color: #000;
 }
 
-.Corbranca, .CorBrancaMeia, .CorBrancaKit {
+.brancaDesenhada02, .brancaLisa04, .brancoKit03 {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
@@ -484,31 +487,91 @@ a {
     border: 1px solid #A5A5A5;
 }
 
-.Vermelho {
+.vermelho03 {
     background-color: #93201F;
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
 }
 
-.Laranja {
+.laranja03 {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
     background-color: #D1671B;
 }
 
-.AzulMarinho {
+.azulMarinhoDesenhada02 {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
     background-color: #202755;
 }
 
+@media screen and (max-width: 768px) {
+    /* MOBILE CANO CURTO */
+
+
+    .Quadrado-da-meia-CanoCurto-Desenhada-Cinza img,
+    .Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro img,
+    .Quadrado-da-meia-CanoCurto-CinzaAzulMarinho img,
+    .Quadrado-da-meia-CanoCurto-Branca img {
+        width: 210px;
+        height: 180px;
+    }
+
+
+    #div-meia-cano-curto {
+        align-items: center;
+        width: 290px;
+        margin-top: 10vh;
+
+    }
+
+    .titulo {
+        margin-top: 5vh;
+        font-size: 3.45vh;
+    }
+}
+
+/* COMEÇO SOCIAL */
+
+
+.Quadrado-da-meia-social-desenhada-AzulMarinho img,
+.Quadrado-da-meia-social-desenhada-Preta img,
+.Quadrado-da-meia-social-desenhada-Cinza img,
+.Quadrado-da-meia-social-lisa-Preta img,
+.Quadrado-da-meia-social-lisa-AzulMarinho img,
+.Quadrado-da-meia-social-lisa-Cinza img{
+    width: 210px;
+        height: 180px;
+}
 
 
 
-/* MOBILE */
+
+/* CORES */
+
+.corDesenhada-01,
+.corDesenhada-02,
+.corDesenhada-03{
+    font-family: 'WorkSans';
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #9DA1A0;
+}
+
+
+
+
+
+
+
 
 
 
@@ -679,7 +742,9 @@ a {
     font: 400 15px 'WorkSans', sans-serif;
 }
 
-/* VERSÃO MOBILE */
+
+
+/* VERSÃO MOBILE   RODAPE */
 
 @media screen and (max-width: 500px) {
     .container-rodape {
@@ -738,36 +803,4 @@ a {
         justify-content: center;
         /* Centraliza o conteúdo */
     }
-}
-
-
-
-
-
-
-
-/* CANO CURTO */
-
-@media  screen and (max-width: 768px)  {
-    
-    
-.Quadrado-da-meia-CanoCurto-Desenhada-Cinza img,
-.Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro img,
-.Quadrado-da-meia-CanoCurto-CinzaAzulMarinho img,
-.Quadrado-da-meia-CanoCurto-Branca img{
-    width:  210px;
-    height: 180px;
-}
-
-
-#div-meia-cano-curto {
-    align-items: center;
-    width:290px;
-    margin-top: 10vh;
-   
-}
-.titulo{
-    margin-top: 5vh;
-    font-size: 3.45vh;
-}
 }
