--- a/descricaoMasculina/style-masc.css
+++ b/descricaoMasculina/style-masc.css
@@ -374,7 +374,14 @@ button {
 }
 
 
-
+.img-Masc{
+    width: 400px;
+    height: 500px;
+}
+.img-MascKit{
+    width:  300px;
+    height: 200px;
+}
 
 
 
