--- a/esportvaMasc.css
+++ b/esportvaMasc.css
@@ -10,6 +10,10 @@ a {
     text-decoration: none;
 }
 
+body {
+    background-color: #fff;
+  }
+
 /* FONTES */
 
 @font-face {
@@ -34,8 +38,8 @@ a {
 .cabecalhoUm {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin: 0 80px;
+    justify-content: center;
+    margin: 5px 80px;
     padding: 5px;
 }
 
@@ -52,9 +56,22 @@ a {
     width: 150px;
 }
 
+.imagemLogo {
+    flex: 1;
+}
+
 .linha {
+    width: 100%;
+    height: 1px;
     background-color: #fff;
-    height: 0.4px;
+    margin-bottom: 10px;
+}
+
+#header::after {
+    content: "";
+    display: block;
+    height: 20px;
+    background-color: #252160;
 }
 
 .cabecalho2 {
@@ -82,24 +99,19 @@ a {
     display: none;
     position: absolute;
     top: 100%;
-    /* Posiciona logo abaixo do item do menu */
     left: 50%;
-    /* Centraliza horizontalmente em relação ao item do menu */
     transform: translateX(-50%);
-    /* Ajusta a posição para centralizar */
-    width: 50vw;
-    /* Largura fixa para o submenu */
+    width: 20vw;
     background-color: #fff;
     border: 1px solid #2F2F2F;
     padding: 10px;
     z-index: 1;
     border-radius: 20px;
     box-sizing: border-box;
-    /* Garante que o padding seja incluído na largura total */
 }
 
 .submenuOrganizacao {
-    margin: 10px 80px;
+    margin: 10px 20px;
     text-align: left;
 }
 
@@ -137,10 +149,96 @@ a {
     border-bottom: 1px solid #fff;
 }
 
+.menu-icon {
+    display: none;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
+.modal-menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    /* Posiciona o menu fora da tela à direita */
+    width: 100%;
+    height: 100%;
+    background-color: #252160;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 100;
+    transition: right 0.5s ease;
+    /* Controla o tempo da animação */
+}
+
+.modal-menu .imagemLogo {
+    margin: 80px 0 30px 0;
+}
+
+.modal-menu .imagemLogo img {
+    width: 120px;/
+}
+
+.modal-menu nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    padding: 0 10%;
+}
+
+.menu-itemModal {
+    position: relative;
+    width: 100%;
+    margin: 10px 0;
+}
+
+.itemModal {
+    color: white;
+    font: 600 20px 'WorkSans', sans-serif;
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.itemModal:hover {
+    color: #c2c2c2;
+}
+
+.submenuModal {
+    display: none;
+    padding: 10px;
+    margin-left: 10px;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.submenuModal a {
+    color: rgb(0, 0, 0);
+    font: 400 16px 'WorkSans', sans-serif;
+    text-decoration: none;
+    display: block;
+    margin: 8px 0;
+}
+
+.submenuModal a:hover {
+    color: #5b5b5b;
+}
+
+.close-modal {
+    position: absolute;
+    top: 35px;
+    right: 35px;
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+    z-index: 101;
+}
+
 
 /* FIM DO CABEÇALHO */
-
-
 
 /* COMEÇO DAS MEIAS ESPORTIVAS MASCULINAS*/
 .titulo {
@@ -464,7 +562,9 @@ a {
 }
 
 
-.cinzaDesenhada01, .cinzaLisa04, .cinzaKit03 {
+.cinzaDesenhada01,
+.cinzaLisa04,
+.cinzaKit03 {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
@@ -472,14 +572,18 @@ a {
 }
 
 
-.pretaDesenhada01, .pretaLisa04, .pretoKit03{
+.pretaDesenhada01,
+.pretaLisa04,
+.pretoKit03 {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
     background-color: #000;
 }
 
-.brancaDesenhada02, .brancaLisa04, .brancoKit03 {
+.brancaDesenhada02,
+.brancaLisa04,
+.brancoKit03 {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
@@ -508,32 +612,6 @@ a {
     background-color: #202755;
 }
 
-@media screen and (max-width: 768px) {
-    /* MOBILE CANO CURTO */
-
-
-    .Quadrado-da-meia-CanoCurto-Desenhada-Cinza img,
-    .Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro img,
-    .Quadrado-da-meia-CanoCurto-CinzaAzulMarinho img,
-    .Quadrado-da-meia-CanoCurto-Branca img {
-        width: 210px;
-        height: 180px;
-    }
-
-
-    #div-meia-cano-curto {
-        align-items: center;
-        width: 290px;
-        margin-top: 10vh;
-
-    }
-
-    .titulo {
-        margin-top: 5vh;
-        font-size: 3.45vh;
-    }
-}
-
 /* COMEÇO SOCIAL */
 
 
@@ -542,9 +620,9 @@ a {
 .Quadrado-da-meia-social-desenhada-Cinza img,
 .Quadrado-da-meia-social-lisa-Preta img,
 .Quadrado-da-meia-social-lisa-AzulMarinho img,
-.Quadrado-da-meia-social-lisa-Cinza img{
+.Quadrado-da-meia-social-lisa-Cinza img {
     width: 210px;
-        height: 180px;
+    height: 180px;
 }
 
 
@@ -554,7 +632,7 @@ a {
 
 .corDesenhada-01,
 .corDesenhada-02,
-.corDesenhada-03{
+.corDesenhada-03 {
     font-family: 'WorkSans';
     width: 5vh;
     height: 5vh;
@@ -577,31 +655,6 @@ a {
 
 /* ---------------------------RODAPE ----------------------------------------------------------- */
 
-/* RESET */
-* {
-    box-sizing: border-box;
-    border: 0;
-    padding: 0;
-    margin: 0;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-/* FONTES */
-
-@font-face {
-    font-family: 'LibreFranklin';
-    src: url(fonts/LibreFranklin-VariableFont_wght.ttf);
-}
-
-@font-face {
-    font-family: 'WorkSans';
-    src: url(fonts/WorkSans-VariableFont_wght.ttf);
-}
-
 /* RODAPÉ */
 
 #footer {
@@ -609,6 +662,10 @@ a {
     color: white;
     margin-top: 120px;
     transition: background-color 0.5s ease;
+}
+
+#footer a {
+    color: #ffffff;
 }
 
 #footer:hover {
@@ -742,7 +799,97 @@ a {
     font: 400 15px 'WorkSans', sans-serif;
 }
 
+@media (max-width: 768px) {
+    .container {
+        margin: 50px;
+    }
 
+    /* CABEÇALHO */
+    .cabecalhoUm {
+        justify-content: space-between;
+        margin: 5px 20px;
+    }
+
+    .imagemLogo img {
+        width: 130px;
+    }
+
+    .imagemLogo {
+        flex: none;
+    }
+
+    .cabecalho2 {
+        display: none;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .submenu {
+        display: none;
+    }
+
+    .menu-item.open .submenu {
+        display: block;
+    }
+
+    .menu-item:hover .submenu {
+        display: none;
+    }
+
+    #meiasBabyDesMasc {
+        padding-top: 15vh;
+        margin: 0 30px;
+    }
+
+    .modal-menu.show {
+        right: 0;
+    }
+
+    /* FIM DO CABEÇALHO */
+
+    /* KIT */
+    .Quadrado-da-meia-esportiva-kit01 img,
+    .Quadrado-da-meia-esportiva-kit02 img,
+    .Quadrado-da-meia-esportiva-cano-curto-kit img {
+        width: 210px;
+        height: 100px;
+        margin: 5px 0px;
+    }
+
+    #div-meia {
+        align-items: center;
+        width: 280px;
+        margin-top: 10vh;
+        border: 1px solid #A5A5A5;
+        border-radius: 20px;
+    }
+
+    /* MOBILE CANO CURTO */
+
+
+    .Quadrado-da-meia-CanoCurto-Desenhada-Cinza img,
+    .Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro img,
+    .Quadrado-da-meia-CanoCurto-CinzaAzulMarinho img,
+    .Quadrado-da-meia-CanoCurto-Branca img {
+        width: 210px;
+        height: 180px;
+    }
+
+
+    #div-meia-cano-curto {
+        align-items: center;
+        width: 290px;
+        margin-top: 10vh;
+
+    }
+
+    .titulo {
+        margin-top: 5vh;
+        font-size: 3.45vh;
+    }
+}
 
 /* VERSÃO MOBILE   RODAPE */
 
