--- a/esportvaMasc.css
+++ b/esportvaMasc.css
@@ -12,7 +12,7 @@ a {
 
 body {
     background-color: #fff;
-  }
+}
 
 /* FONTES */
 
@@ -522,7 +522,6 @@ body {
 .Quadrado-da-meia-CanoCurto-LisaKit03 img,
 .Quadrado-da-meia-CanoCurto-Desenhada-Kit02 img,
 .Quadrado-da-meia-CanoCurto-Desenhada-Kit01 img {
-
     width: 390px;
     height: 140px;
     margin-top: 4vh;
@@ -864,6 +863,15 @@ body {
         margin-top: 10vh;
         border: 1px solid #A5A5A5;
         border-radius: 20px;
+    }
+
+    .Quadrado-da-meia-CanoCurto-LisaKit04 img,
+    .Quadrado-da-meia-CanoCurto-LisaKit03 img,
+    .Quadrado-da-meia-CanoCurto-Desenhada-Kit02 img,
+    .Quadrado-da-meia-CanoCurto-Desenhada-Kit01 img {
+        width: 280px;
+        height: 140px;
+        margin-top: 4vh;
     }
 
     /* MOBILE CANO CURTO */
